# asdqwe

./: .gitignore  Board.cpp  Board.h  BoardScene.cpp  BoardScene.h  BoardView.cpp  BoardView.h  BoardWidget.cpp  BoardWidget.h  CMakeLists.txt  Chess.pro  Field.cpp  Field.h  Figure.cpp  Figure.h  IFigure.cpp  IFigure.h  Pawn.cpp  Pawn.h  README.md  board.cpp  board.h  board_view.cpp  board_view.h  field.cpp  field.h  figure.cpp  figure.h  imgs.qrc  main.cpp  mainwindow.cpp  mainwindow.h  pawn.cpp  pawn.h
gui/: CMakeLists.txt  chessboard.cpp  chessboard.h  figure.cpp  figure.h  mainwindow.cpp  mainwindow.h
imgs/: AllFigures.kra
network/: .gitignore  CMakeLists.txt
